bebytes/tests/compile_time/types/unsupported_structure.stderr
error: Only named fields are supported
 --> tests/compile_time/types/unsupported_structure.rs:6:25
  |
6 | struct UnsupportedStruct(u8, u16, u32);
  |                         ^^^^^^^^^^^^^^
